projects/vb6parse/snapshots/tests/library/string/formatpercent/formatpercent_assignment.snap
---
source: projects/vb6parse/tests/library/string/formatpercent.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: lblGrade
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Caption
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"Score: \""
            - kind: Whitespace
              text: " "
            - kind: Ampersand
              text: "&"
            - kind: Whitespace
              text: " "
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: FormatPercent
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: score
                            - kind: Whitespace
                              text: " "
                            - kind: DivisionOperator
                              text: /
                            - kind: Whitespace
                              text: " "
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: maxScore
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "0"
                - kind: RightParenthesis
                  text: )
